--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,11 +16,11 @@
                 <h1 class="display-2 logo-font text-white" id="display">
                     Explore Cookbooks here
                 </h1>
-                <div class="my-5">
-                    <h4>
-                        <a href="{% url 'books' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                    </h4>
-                </div>
+            </div>
+            <div class="col-7 mb-5">
+                <h4>
+                    <a href="{% url 'books' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                </h4>
             </div>
         </div>
     </div>
