--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,13 +1,38 @@
-html {
+html, body {
     height: 100%;
+    margin: 0;
 }
 
 body {
     background: url('/media/homepage_background.jpg') no-repeat center center fixed;
     background-size: cover;
-    height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper {
+    flex: 1;
+}
+
+.footer {
+    background: #000;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+    width: 100%;
+}
+
+.footer .container {
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+@media (max-width: 767px) {
+    .footer {
+        padding: 1rem;
+    }
 }
 
 /* from Bulma */
@@ -80,7 +105,7 @@ body {
 }
 
 #display {
-    margin-top: 50%;
+    margin-top: 25%;
 }
 
 hr {
