--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -144,8 +144,8 @@
     </div>
 </div>
 <div class="btt-button shadow-sm rounded-0 border border-black">
-    <a class="btt-link d-flex h-100">
-        <i class="fas fa-arrow-up text-black bg-white mx-auto my-auto"></i>
+    <a class="btt-link bg-white d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
     </a>
 </div>
 {% endblock %}
