--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -42,8 +42,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Home</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <a class="btn btn-outline-black rounded-0 mb-5" href="{% url 'home' %}">Home</a>
+  <button class="primaryAction mb-5" type="submit">{% trans "Sign In" %}</button>
 </form>
 
 {% endblock %}
