--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Thank You</h2>
+                <h2 class="logo-font text-center mb-5">Thank You</h2>
                 <hr>
                 <p class="text-black">Your order information is shown below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
             </div>
@@ -27,7 +27,7 @@
 
         <div class="row">
             <div class="col-12 col-lg-7">
-                <div class="order-confirmation-wrapper p-2 border">
+                <div class="order-confirmation-wrapper p-2 border mb-5">
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Order Info:</small>
@@ -199,7 +199,7 @@
                             <span class="text-uppercase">Back to Profile</span>
                         </a>
                     {% else %}
-                        <a href="{% url 'new_arrivals' %}" class="btn btn-black rounded-0 my-2">
+                        <a href="{% url 'new_arrivals' %}" class="btn btn-black rounded-0 my-2 mb-5">
                             <span class="icon mr-2">
                                 <i class="fas fa-gifts"></i>
                             </span>
