--- a/books/templates/books/delete_review.html
+++ b/books/templates/books/delete_review.html
@@ -20,8 +20,8 @@
             <p>Are you sure you want to delete this review?</p>
             <form method="POST">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-danger">Delete</button>
-                <a href="{% url 'book_detail' review.book.id %}" class="btn btn-secondary">Cancel</a>
+                <button type="submit" class="btn btn-danger mb-5">Delete</button>
+                <a href="{% url 'book_detail' review.book.id %}" class="btn btn-secondary mb-5">Cancel</a>
             </form>
         </div>
     </div>
