--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@
             {% endblock %}
         </main>
 
-        <footer class="footer bg-black text-white py-4">
+        <footer class="footer bg-black text-white">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 text-center">
