--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,9 @@
             </div>
             <div class="col-7 mb-5">
                 <h4>
-                    <a href="{% url 'books' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                    <a href="{% url 'books' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
+                        Shop Now
+                    </a>
                 </h4>
             </div>
         </div>
