--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,6 +15,7 @@
 
 {% block content %}
     <div class="overlay"></div>
+    
     <div class="container">
         <div class="row">
             <div class="col">
@@ -23,15 +24,19 @@
                 <hr>
             </div>
         </div>
+        
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Default Delivery Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                    <button class="btn btn-black rounded-0 text-uppercase float-right">
+                        Update Information
+                    </button>
                 </form>
             </div>
+
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Order History</p>
                 <div class="order-history table-responsive">
@@ -48,8 +53,7 @@
                             {% for order in orders %}
                                 <tr>
                                     <td>
-                                        <a href="{% url 'order_history' order.order_number %}"
-                                           title="{{ order.order_number }}">
+                                        <a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
                                             {{ order.order_number|truncatechars:6 }}
                                         </a>
                                     </td>
@@ -60,11 +64,15 @@
                                                 <li class="small d-flex align-items-center">
                                                     <!-- Book Image -->
                                                     {% if item.book.image %}
-                                                        <img class="img-fluid rounded mr-2" src="{{ item.book.image.url }}"
-                                                             alt="{{ item.book.title }}" height="115px" width="90px">
+                                                        <img class="img-fluid rounded mr-2" 
+                                                             src="{{ item.book.image.url }}"
+                                                             alt="{{ item.book.title }}" 
+                                                             height="115px" width="90px">
                                                     {% else %}
-                                                        <img class="img-fluid rounded mr-2" src="{{ MEDIA_URL }}noimage.png"
-                                                             alt="{{ item.book.name }}" height="115px" width="90px">
+                                                        <img class="img-fluid rounded mr-2" 
+                                                             src="{{ MEDIA_URL }}noimage.png"
+                                                             alt="{{ item.book.name }}" 
+                                                             height="115px" width="90px">
                                                     {% endif %}
                                                     <!-- Book Title and Format -->
                                                     <div>
@@ -82,6 +90,7 @@
                 </div>
             </div>
         </div>
+
         <div class="row mt-5">
             <div class="col text-center">
                 <a href="{% url 'view_wishlist' %}" class="btn btn-primary mb-5">View My Wishlist</a>
