--- a/wishlist/templates/wishlist/view_wishlist.html
+++ b/wishlist/templates/wishlist/view_wishlist.html
@@ -39,11 +39,11 @@
                                 <div class="img-thumbnail wishlist-img">
                                     {% if item.book.image %}
                                     <a href="{% url 'book_detail' item.book.id %}"> 
-                                        <img src="{{ item.book.image.url }}" alt="{{ item.book.title }}" class="img-thumbnail">
+                                        <img src="{{ item.book.image.url }}" alt="{{ item.book.title }} cover image" class="img-thumbnail">
                                     </a>
                                     {% else %}
                                     <a href="{% url 'book_detail' item.book.id %}"> 
-                                        <img src="{% static 'noimage.png' %}" alt="{{ item.book.title }}" class="img-thumbnail">
+                                        <img src="{% static 'noimage.png' %}" alt="No image available for {{ item.book.title }}" class="img-thumbnail">
                                     </a>                                    
                                     {% endif %}
                                 </div>
