--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -16,9 +16,9 @@
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if book.image %}
-                        <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
+                        <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }} book cover">
                     {% else %}
-                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
+                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="No image available for {{ book.title }}">
                     {% endif %}
                 </div>
             </div>
