--- a/wishlist/templates/wishlist/view_wishlist.html
+++ b/wishlist/templates/wishlist/view_wishlist.html
@@ -43,7 +43,7 @@
                                     </a>
                                     {% else %}
                                     <a href="{% url 'book_detail' item.book.id %}"> 
-                                        <img src="{% static 'noimage.png' %}" alt="No image available for {{ item.book.title }}" class="img-thumbnail">
+                                        <img src="{% media 'noimage.png' %}" alt="No image available for {{ item.book.title }}" class="img-thumbnail">
                                     </a>                                    
                                     {% endif %}
                                 </div>
