--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -29,6 +29,7 @@
                 <div class="row mt-1 mb-2"></div>
                 <div class="col-6 my-auto order-md-last justify-content-md-end">
                     <div class="sort-select-wrapper w-50">
+                        <label for="sort-selector" class="form-label">Sort by:</label>
                         <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting %}info{% else %}black{% endif %}">
                             <option value="reset" {% if not current_sorting %}selected{% endif %}>Sort by...</option>
                             <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
